--- a/src/app/components/products/products-list/product-item/product-item.component.html
+++ b/src/app/components/products/products-list/product-item/product-item.component.html
@@ -11,4 +11,9 @@
       <span *ngIf="!product.selected">Select</span>
     </button>
   </td>
+  <td>
+    <button (click)="onDelete(product)" class="btn btn-danger">
+      <i class="fa fa-trash"></i>
+    </button>
+  </td>
 </tr>
