--- a/src/app/components/products/products-navbar/products-navbar.component.html
+++ b/src/app/components/products/products-navbar/products-navbar.component.html
@@ -1,20 +1,24 @@
 <nav class="navbar navbar-expand-sm bg-light navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <button class="btn btn-outline-info btn-sm" (click)="onGetAllProducts()">All</button>
+      <button [ngClass]="state?.currentAction?.type==ProductActionTypes.GET_ALL_PRODUCTS_SUCCESS?'btn-danger':'btn-outline-info'"
+              class="btn btn-sm" (click)="onGetAllProducts()">All</button>
     </li>
     <li>
-      <button class="btn btn-outline-info btn-sm" (click)="onGetSelectedProducts()">Selected</button>
+      <button [ngClass]="state?.currentAction?.type==ProductActionTypes.GET_SELECTED_PRODUCTS_SUCCESS?'btn-danger':'btn-outline-info'"
+              class="btn btn-outline-info btn-sm" (click)="onGetSelectedProducts()">Selected</button>
     </li>
     <li>
-      <button class="btn btn-outline-info btn-sm" (click)="onNewProduct()">New</button>
+      <button [ngClass]="state?.currentAction?.type==ProductActionTypes.NEW_PRODUCT_SUCCESS?'btn-danger':'btn-outline-info'"
+              class="btn btn-outline-info btn-sm" (click)="onNewProduct()">New</button>
     </li>
   </ul>
   <ul class="navbar-nav m-lg-auto">
     <li>
       <form #f="ngForm" (ngSubmit)="onSearch(f.value)" class="form-inline">
         <input type="text" ngModel name="keyword">
-        <button type="submit" class="btn btn-outline-info btn-sm">
+        <button [ngClass]="state?.currentAction?.type==ProductActionTypes.SEARCH_PRODUCTS_SUCCESS?'btn-danger':'btn-outline-info'"
+                type="submit" class="btn btn-outline-info btn-sm">
           <i class="fa fa-search"></i>
           Search
         </button>
